Implémentation du model MVVM dans le code

--- a/BillingManagement.Business/BillingManagement.Business.csproj
+++ b/BillingManagement.Business/BillingManagement.Business.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="CustomersDataService.cs" />
-    <Compile Remove="IDataService.cs" />
+    <ProjectReference Include="..\app_models\BillingManagement.Models.csproj" />
   </ItemGroup>
 
 </Project>
