Button nouveau fonctionne

--- a/Inventaire/BillingManagement.UI.csproj
+++ b/Inventaire/BillingManagement.UI.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\app_models\BillingManagement.Models.csproj" />
+    <ProjectReference Include="..\app_Models\BillingManagement.Models.csproj" />
     <ProjectReference Include="..\BillingManagement.Business\BillingManagement.Business.csproj" />
   </ItemGroup>
 
